--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "start": "node dist/server.js"
   },
   "dependencies": {
+    "@fastify/one-line-logger": "latest",
     "@fastify/vite": "8.0.0-alpha.2",
-    "@fastify/vue": "^0.5.0",
+    "@fastify/vue": "1.0.0-alpha.5",
     "pinia": "^2.3.1",
     "fastify": "^5.2.1",
     "vue": "^3.5.13",
