--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "build:server": "vue-tsc --build && tsc",
     "dev": "npm run build:server && node dist/server.js --dev",
     "lint": "eslint ./src/",
+    "test": "vitest run",
+    "test:type": "vitest --ui --typecheck",
     "start": "node dist/server.js"
   },
   "dependencies": {
     "@fastify/one-line-logger": "latest",
     "@fastify/vite": "8.0.0-alpha.2",
     "@fastify/vue": "1.0.0-alpha.5",
-    "pinia": "^2.3.1",
     "fastify": "^5.2.1",
+    "pinia": "^2.3.1",
+    "ts-node": "^10.9.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
@@ -23,17 +26,21 @@
     "@typescript-eslint/eslint-plugin": "^8.23.0",
     "@typescript-eslint/parser": "^8.23.0",
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vitest/browser": "^3.0.5",
     "@vitest/eslint-plugin": "^1.1.25",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.19.0",
     "eslint-plugin-vue": "^9.32.0",
     "globals": "^15.14.0",
+    "jsdom": "^26.0.0",
+    "playwright": "^1.50.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.23.0",
+    "vite": "^6.1.0",
     "vite-plugin-vue-devtools": "^7.7.0",
     "vitest": "^3.0.2",
-    "vite": "^6.1.0",
+    "vitest-browser-vue": "^0.1.0",
     "vue-tsc": "^2.2.0"
   }
 }
