--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "start": "node dist/server.js"
   },
   "dependencies": {
+    "@fastify/env": "^5.0.2",
     "@fastify/one-line-logger": "latest",
     "@fastify/vite": "8.0.0-alpha.2",
     "@fastify/vue": "1.0.0-alpha.5",
+    "@testing-library/vue": "^8.1.0",
+    "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
+    "knex": "^3.1.0",
+    "mysql": "^2.18.1",
     "pinia": "^2.3.1",
     "ts-node": "^10.9.2",
     "vue": "^3.5.13",
