--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
     "knex": "^3.1.0",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.14.1",
     "node-flywaydb": "^3.0.7",
     "pinia": "^2.3.1",
     "ts-node": "^10.9.2",
